--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content color="warning">
-  <div>
+  <div fxLayout="column" fxLayoutAlign="center center">
     <div fxLayout="row" fxLayoutAlign="center center">
       <ion-avatar style="width: 200px;height: 200px;">
         <img src="assets/logo.png" />
