--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -7,3 +7,6 @@ ion-button {
     from { background-position: 0 0; }
     to { background-position: -400px 0; }
 }
+ion-card  {
+  max-width: 600px;
+}
