--- a/src/app/pages/tabs/categorias/components/add-categoria/add-categoria.page.html
+++ b/src/app/pages/tabs/categorias/components/add-categoria/add-categoria.page.html
@@ -16,7 +16,11 @@
               <ion-label [color]="color">Color</ion-label>
               <ion-select formControlName="color" okText="Aceptar" cancelText="Salir" interface="alert" (ionChange)="cambiarColor($event)">
                 <ion-select-option value="primary" color="primary">Azul</ion-select-option>
-                <ion-select-option value="warning">Amarillo</ion-select-option>
+                <ion-select-option value="warning">Naranja</ion-select-option>
+                <ion-select-option value="secondary">Celeste</ion-select-option>
+                <ion-select-option value="tertiary">Morado</ion-select-option>
+                <ion-select-option value="medium">Gris</ion-select-option>
+                <ion-select-option value="dark">Negro</ion-select-option>
                 <ion-select-option value="danger">Rojo</ion-select-option>
                 <ion-select-option value="success">Verde</ion-select-option>
               </ion-select>
