--- a/src/app/pages/tabs/items/components/modal-create/modal-create.component.html
+++ b/src/app/pages/tabs/items/components/modal-create/modal-create.component.html
@@ -32,22 +32,22 @@
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">FC<ion-text color="warning">*</ion-text>
+        <ion-label position="stacked">Factor de corrección<ion-text color="warning">*</ion-text>
         </ion-label>
         <ion-input formControlName="fc" type="number"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">H de C<ion-text color="warning">*</ion-text>
+        <ion-label position="stacked">Carbohidratos (gr)<ion-text color="warning">*</ion-text>
         </ion-label>
         <ion-input formControlName="h_d_c" type="number"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Prot<ion-text color="warning">*</ion-text>
+        <ion-label position="stacked">Proteínas (gr)<ion-text color="warning">*</ion-text>
         </ion-label>
         <ion-input formControlName="prot" type="number"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Gra<ion-text color="warning">*</ion-text>
+        <ion-label position="stacked">Grasas (gr)<ion-text color="warning">*</ion-text>
         </ion-label>
         <ion-input formControlName="grs" type="number"></ion-input>
       </ion-item>
@@ -57,7 +57,7 @@
         <ion-input formControlName="fibra" type="number"></ion-input>
       </ion-item>
       <ion-item>
-          <ion-label position="stacked">Na (mg)<ion-text color="warning">*</ion-text>
+          <ion-label position="stacked">Sodio (mg)<ion-text color="warning">*</ion-text>
           </ion-label>
           <ion-input formControlName="na" type="number"></ion-input>
       </ion-item>
@@ -67,7 +67,7 @@
           <ion-input formControlName="potasio" type="number"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Ca (mg)<ion-text color="warning">*</ion-text>
+        <ion-label position="stacked">Caloria<ion-text color="warning">*</ion-text>
         </ion-label>
         <ion-input formControlName="ca" type="number"></ion-input>
       </ion-item>
