--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -20,11 +20,16 @@ ion-item {
 .title {
   text-align: center;
 }
+.card-img {
+  width: 100%;
+  max-width: 500px;
+}
 
 .profile {
   padding-top: 0.5em;
   margin-bottom: 0.5em;
   max-width: 30vw;
+  max-height: 30vh;
 }
 
 
