--- a/src/app/pages/list/components/agregar-alimento/agregar-alimento.component.html
+++ b/src/app/pages/list/components/agregar-alimento/agregar-alimento.component.html
@@ -17,7 +17,7 @@
               </ion-select>
             </ion-item>
             <ion-item>
-              <ion-label position="stacked">Cantidad <ion-text color="danger">*</ion-text>
+              <ion-label position="stacked">Cantidad en gr<ion-text color="danger">*</ion-text>
               </ion-label>
               <ion-input formControlName="cantidad" type="number"></ion-input>
             </ion-item>
